--- a/app/build.gradle
+++ b/app/build.gradle
@@ -79,4 +79,7 @@ dependencies {
     implementation "net.gotev:cookie-store-okhttp:1.5.0"
     implementation "net.gotev:cookie-store:1.5.0"
 
+
+    implementation "com.github.salehyarahmadi:DataTable:v1.0.0"
+
 }
