--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,9 @@
 buildscript {
     repositories {
         google()
+        jcenter()
         mavenCentral()
+        maven { url 'https://jitpack.io' }
     }
     dependencies {
         classpath "com.android.tools.build:gradle:7.0.4"
@@ -11,6 +13,9 @@ buildscript {
         classpath 'com.google.dagger:hilt-android-gradle-plugin:2.38.1'
     }
 }
+
+
+
 
 task clean(type: Delete) {
     delete rootProject.buildDir
