--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,6 +51,7 @@ dependencies {
     implementation 'com.github.kirich1409:viewbindingpropertydelegate:1.5.3'
 
     implementation "com.google.dagger:hilt-android:2.38.1"
+    implementation 'androidx.browser:browser:1.3.0'
     kapt "com.google.dagger:hilt-compiler:2.38.1"
 
     implementation 'com.jakewharton.timber:timber:5.0.1'
@@ -76,5 +77,7 @@ dependencies {
 
     implementation "net.gotev:cookie-store-okhttp:1.5.0"
     implementation "net.gotev:cookie-store:1.5.0"
+
+    implementation "androidx.browser:browser:1.4.0"
 
 }
