--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,7 +51,7 @@ dependencies {
     implementation 'com.github.kirich1409:viewbindingpropertydelegate:1.5.3'
 
     implementation "com.google.dagger:hilt-android:2.38.1"
-    implementation 'androidx.browser:browser:1.3.0'
+
     kapt "com.google.dagger:hilt-compiler:2.38.1"
 
     implementation 'com.jakewharton.timber:timber:5.0.1'
@@ -83,5 +83,10 @@ dependencies {
     implementation 'androidx.room:room-ktx:2.4.2'
     kapt "androidx.room:room-compiler:2.4.2"
     implementation 'androidx.room:room-runtime:2.4.2'
+
+    implementation "androidx.work:work-runtime-ktx:2.7.1"
+
+    implementation 'androidx.hilt:hilt-work:1.0.0'
+    kapt 'androidx.hilt:hilt-compiler:1.0.0'
 
 }
